# vosk-asterisk

./: .gitignore  Makefile.am  README  README.md  bootstrap  configure.ac
conf/: res-speech-vosk.conf  res_speech_vosk.conf
res-speech-vosk/: Makefile.am  res_http_websocket_fix.c  res_speech_vosk.c
